@@ -10,6 +10,6 @@ AUX moblock-0.8-fix-nfq_unbind_pf-error.patch 615 RMD160 59734a3e704b12abbaacef0
 AUX moblock-0.8-makefile.patch 853 RMD160 db5143301e9bead74090d42f9e66936ebc96417d SHA1 119e587f5f50964214c0bfd45ce844e5a95ac41c SHA256 927c6b7da2ef2bbe522f6a530125ee0d6235e052d6f81b1405b6e913f431bbb0
 AUX moblock-0.8-rename-stats-file.patch 2051 RMD160 e7e395ffef153e72640b0b98fbc65ba28652230f SHA1 3917f61cc1cb40ca952e37d088c8eb7de5b4aff2 SHA256 cd63be8f9783ee4254e7eac8524888fc3b240cb8c2f3d4fa3e9d50dc27a4f173
 DIST MoBlock-0.8-i586.tar.bz2 18553 RMD160 2190cfb55977ad23176ddb43e410ee5d9293a518 SHA1 e9e7b47622eb606b6c429fc507fc50d0c037487e SHA256 30d6d56fe72606ffa308fb8e6edd44c2b1806dfa4da8a13bde046964601fd904
-EBUILD moblock-0.8-r2.ebuild 2979 RMD160 5b1de6a9b82c21369e911433662b28b8b7c2500d SHA1 f5fa4140c6ad3edb1f9812799d0e16c5e5207c91 SHA256 2a3451dc2ed9145ebdd0ee6342445cb9929ba19d1332bd95a4078b669f8eb7b2
-MISC ChangeLog 5229 RMD160 8a4099f35d8266cbb8008e24f47cb23b538563ae SHA1 593a8c5457ec30bfbd38252e373d8678551f3a50 SHA256 59802607d113288bd81da3be304718c3f8dc36c22a2671f6f172346f992e4fea
+EBUILD moblock-0.8-r2.ebuild 2690 RMD160 dec9027ce8172ee0737b40294995d86772d611db SHA1 bac734b6c85acade358893431acd568e53a0fb29 SHA256 c90f3409aa7e8c8c12d7983deff0aaefaf1d8bf627ca7929c58d0a851b816e33
+MISC ChangeLog 5346 RMD160 f9ad4c5349c101e0bc43ebae60dc26c0ac25efe2 SHA1 0c0d3b51d006dda3dd9973fce06f1cde7a70ffa5 SHA256 06c50c1ac66fb7a6589e64c2a8ac6b509cd49a87308f6202bcca3d6a26b0eb6b
 MISC metadata.xml 438 RMD160 ba8f8160888e20ee14e19b1f03e850ea4f51d580 SHA1 cf9eb35e84f9c5897d3b5a60a2d6a8830128190f SHA256 ea8e7fbe5303388357b94705bc312740b012b5a058f881367066c5223d56936b
