@@ -2,6 +2,10 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  04 Sep 2009; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
+  moblock-0.8-r2.ebuild:
+  Cleanup, fix pkg_postrm check
+
 *moblock-0.8-r2 (03 Sep 2009)
 
   03 Sep 2009; Daniel Santos (dansan) <daniel.santos@pobox.com>
